# bugdantic

./: pyproject.toml  test.sh
bugdantic/: bugzilla.py  userstory.py
test/: test_bugzilla.py  test_userstory.py
