[project]
name = "bugdantic"
description = "Bugzilla client based on pydantic"
authors = [
  {name = "James Graham", email = "james@hoppipolla.co.uk"}
]

version = "0.2.6"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "httpx[http2]>=0.28.1",
  "pydantic>=2.11.3",
]

[project.optional-dependencies]
test = [
  "mypy==1.16.1",
  "ruff==0.12.2",
  "pytest==8.4.1",
  "pytest-ruff==0.5",
]
