[project]
name = "bugdantic"
description = "Bugzilla client based on pydantic"
authors = [
  {name = "James Graham", email = "james@hoppipolla.co.uk"}
]

version = "0.3.0"
requires-python = ">=3.11"
license = "MPL-2.0"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "httpx[http2]>=0.28.1",
  "pydantic>=2.11.3",
]

[project.optional-dependencies]
test = [
  "mypy==1.18.2",
  "ruff==0.14.1",
  "pytest==8.4.2",
  "pytest-ruff==0.5",
]
